fixed 1.2 on overflow mobile menu issue. added a remove class active-nav-mobile to the javascript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,7 @@ body {
   width: 100%;
   margin: 0px auto;
   padding: 0px;
+  height: 100%;
 }
 .nav-menu {
   position: fixed;
